vendor/squizlabs/php_codesniffer/tests/Core/Generators/Fixtures/StandardWithDocs/Sniffs/Invalid/CodeTitleEmptySniff.php
<?php //ICB0 81:0                                                             ?><?php //002cd
if(extension_loaded('ionCube Loader')){die('The file '.__FILE__." is corrupted.\n");}echo("\nScript error: the ".(($cli=(php_sapi_name()=='cli')) ?'ionCube':'<a href="https://www.ioncube.com">ionCube</a>')." Loader for PHP needs to be installed.\n\nThe ionCube Loader is the industry standard PHP extension for running protected PHP code,\nand can usually be added easily to a PHP installation.\n\nFor Loaders please visit".($cli?":\n\nhttps://get-loader.ioncube.com\n\nFor":' <a href="https://get-loader.ioncube.com">get-loader.ioncube.com</a> and for')." an instructional video please see".($cli?":\n\nhttp://ioncu.be/LV\n\n":' <a href="http://ioncu.be/LV">http://ioncu.be/LV</a> ')."\n\n");exit(199);
?>
HR+cPzSsDL710Ovcd8sWSk+SCoH6L6L7CNPY2UYQ2LrItA/aMMbOIgAClxsTwNT0WRBNPIaHpWgs
wzRmnJH7Uihi5FUWcwVV97IlxVxAro74DOwpSYh5hzRDhY6OMFaii0PkriM0uZWLs93oN6MJnjP9
7+WROBramkCYQ3Et9/ReWf1/AKp7pYwINtSZM8pTwVrrDOOMtCrZwWSfNpGRVR6UumUzVgWLov2j
sXPepUqRnLxb58cGdRGTSNPMJQ379BxmKlA+hkA3mRNhhFUazjL06gBQo9kDSLk8XJ3OY336u72F
9uDa90xBrD+8BOxaRb58Cps/NeJX3nHQp8izTCq3NPw28cGb+gInGRe/28zDQb0QOI875BlmlYZp
7f9vfrINWfYfW7iE87/l6iAON/oPBg4W0f+pLbF9SY7PcBw0jDumEVnc2jAl/detVOQqIUzbKLPh
a9jys8jEAm9sstA6l8htHaWbZT6/IeKGy8DWPA8gNeDBuzx+umcMyUVOH+OIO5/v9Qtde1UMzhUA
3HYf9HUvx4T5u/GR0bL7khoeO9hkRH5rokitU9e1M3g6jn515zqRfZauuC0LxP5EHk9D+4P+zb3Y
VZMOC9bAN2PqeATN8bVtSH/65N6DWV3wxR6BZyx24i39th2A2XycSr//5+He1Zdtu8UhW8ZARWvw
taDWqh7VLtM6C9JTHOv5ULJBOJvKVp5A71FclWlmp66Q2gJWXF6Lj4RUQ36EynmwGgnsrMp6yhU5
rzU40Pdc2cVxPzfRp6P0f8ciSjAuxIiMGnZcm1CLjB/9uwOYoZGtUfeVKXAP3okKVAObEM46iHBU
lbMaMWAkc7XUDJl6QLQ6aWQkfLtZPF/0V19Y5qA5abZIz6v4duwaLldTI5UtA0bEoNEDRyV8d/c4
Fe39801o8OyYKg/qVJPGINRlGdrX9pQACxVw8WVS0/A2GgpSAw1Mjlfns8z+hmYnqvtJrDcYHgYE
rdVWFPRgNrIm7qVCU9kWqdZFDc4kypE32bkQ7JlQaG4PG9VVdav3ss2gd5O65Mqb+yWqin1lS1J/
IZ7I9m94lAPdkR/xB5KCyMvmzyOYfaRq9Kcf9VkGE2/3InSUuALuD6aw4F+OrWNjSy5bSi3uoe7n
18FGLRMGChANwzkvFHj6FW6Bg0JSi9BgO1L6ahkt7oZ+obR+xtOEJGQWzzXkh9jqXZ7zBohRu7xe
LuQGK7lXuOMAjvk/1cGuCwE83ox58HLiIZjGnfNNj6vSKuvHhpPhyBwkVIG9KZ6vRMKuvZCWPlNN
tT4MZ9aW8R+vq3Fmd5rc9N1FEeY8hmyc/29xpEmajAP9HVIwgQY5fzM9mc6DzJJF4X57BpzPVgZm
SvftCYuCPFZxrD0sc55DwkaOmO6Ra3hwJyujRpQT6RnMchczllud4GcwdcPXLagnTDJXDRFd6449
eb5U/DOSXh6YnXgkwElFe2wJASz9MdcpB3k1h28B5eOnw9pEcX8FIdlw/VVsMijSrDsW8wwbtTqX
sxgjR2D2dpVoyYfGTexVhVZxj3SRhzrQrGqu2bc6S7Uvqq6NL1UZ+stEiAVQOSW=